--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_edit_text">EditTextActivity</string>
     <string name="title_activity_show_image">ShowImageActivity</string>
+    <string name="title_activity_thumbnail_test">ThumbnailTestActivity</string>
 </resources>
